FIX ERROR CACHE PAYMENT-COMPONENT-LINKS